# ComfyUI-AgenticFlowAINodes

./: README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: agenticflow_ai_variable.py  io.py
utils/: download.py
